--- a/20230131224526.md
+++ b/20230131224526.md
@@ -45,7 +45,7 @@ Execution Pin
 
 Actor を選択 > Detail > Physics > Simulate Physics
 
-## Physics Mass
+# Physics Mass
 
 Detail > Physics > Mass
 デフォルトだと自動計算されるが、ユーザーが任意に設定できる
@@ -66,7 +66,7 @@ Level <- Actor <- Component の関係
 Level 上の Actor を選択すると Detail で Actor,Component のヒエラルキーが見れるが、
 Propeties では Actor を選択しているとコンポーネントの分まで全部見れて、Component を選択しているとそのコンポーネントのもつ部分だけプロパティが見れる(Actor Property のサブセット)
 
-## example: Cube Actor
+# example: Cube Actor
 
 Cube Actor には StaticMeshComponent がついている
 これが Physics, Rendering などのプロパティを持つ
@@ -142,7 +142,7 @@ return value is Pawn Object.
 
 # Controle Rotation
 
-## DefaultPawn Rotation
+# DefaultPawn Rotation
 
 DefaultPawn does'nt follow camera rotation.
 So, to align projectile to aim, use other rotation.
@@ -163,7 +163,7 @@ Get Actor Forward Vector
 
 later is faivorable(complete in 1 node)
 
-## Multiply Node + Convert Pin
+# Multiply Node + Convert Pin
 
 right click Multiply data pin > Convert to float
 
@@ -189,7 +189,7 @@ Place Actoers Panel btn adds UnrealEditor a panel which lists actors which can b
 
 Geometry >
 
-## brush style
+# brush style
 
 - add
 - carve out
@@ -199,23 +199,23 @@ carve = dig, slice, substruct
 we can create a room by adding box & curved out box space
 so place 2 box
 
-## edit box brush
+# edit box brush
 
 Don't touch scale.
 Should edit Brush Settings > xyz
 
-## Unreal unit
+# Unreal unit
 
 1 cm
 
 Walls: 36m x 29m x 9.6m, brush_type = additive
 WallsSubtract: -2m per dimension, brush_type - subtractive,
 
-## Default Maps
+# Default Maps
 
 Edit > Project Settings... > Default Map > Main
 
-## Copy & Paste Level BP
+# Copy & Paste Level BP
 
 open Minimum_Defaults > Level BP > select all > copy
 open Main Level > Open Level BP > Paste
@@ -236,3 +236,98 @@ defaultly added to Level
 - SkyAtmosphere : sky color
 - SkyLight : overwhole light
 - SM_SkyShere : Static Sphere Mesh which is very very big & surround over level
+- VolumetricCloud = Cloud
+
+# Actor Component
+
+Industry Props Pack contains Rack_01 & Rack_02.
+They are combined when use, but enable physics, they are not a single rigid body.
+
+So, It should be composed in one blueprint Actor class as static mesh components.
+
+Select Rack_01 in Level > Select Rack_02 in ContentBrowser-Meshes > drop in Detail_Actor
+
+then, Rack_02 component is child of Rack_01
+
+# Collision
+
+Editor View > Lit > Wireframe
+
+Switching Collision shape which game program sees
+
+- Wireframe = 3D models geometry
+- Player Collision = Optimize shape. It's little juggy.
+
+# Edit Collision Shape in StaticMesh
+
+By default, collision is calculated from geometry.
+But it's not favorable & complex collision that some physics bug occuers.
+
+- Double Click Static Mesh > edit view > Collision > Remove Collision
+- Collision > Add 10DOP-Z Simplified Collision
+
+Z Simplified Collision is a box shape which top and bottom is aligned vertically.
+So It reduce collision bug on statcking, etc...
+
+# Convert Blue Print Class Button
+
+there is graph node icon button on top of detail.
+It is Convert actor to resusable blue print class button.
+
+# BP Creation Method
+
+- New Subclass -> Inherit existing class
+- Child Actors
+- Harvest Component
+
+# Copy Actor instance Method in Level
+
+- Alt + D = duplicate. location is some different
+- Ctrl + C -> Ctrl + v = copy and past
+- Alt + Click + drug = duplicate and move
+
+The most quick way is Alt + Drug;
+
+# Variable
+
+Main BP > Window > My Blueprint
+
+then, shows properties of level BP in sidebar.
+
+Variable > + > integer
+
+and Compile, then details default value is set.
+
+## Manipulate Variable
+
+Drug Variable into Event Graph > Select get / set
+
+or
+
+- ctrl + drug = get
+- alt + drug = set
+
+# Subtract ammo(int) and set.
+
+# Branch Node (= if statement)
+
+comparison nodes
+
+- Greater
+- Equal
+- Less
+- ge, le
+
+# Functions
+
+Growing BP, It's messsy of a lot of nodes.
+So, bundle them in to function.
+
+- Many provided nodes are also functions
+- we can create our own too.
+
+`Select Many Nodes > RMB > Collapse to Function`
+
+# Comment
+
+Select Multiple nodes > C key
