--- a/20230131224526.md
+++ b/20230131224526.md
@@ -326,8 +326,115 @@ So, bundle them in to function.
 - Many provided nodes are also functions
 - we can create our own too.
 
+# Create Function from existing Nodes
+
 `Select Many Nodes > RMB > Collapse to Function`
+
+# Create Function from scratch
+
+It can add pin from function details.
+
+- input
+- output
+
+# function arg - Target
+
+https://forums.unrealengine.com/t/understanding-target-blueprint/275726
+
+A created function have default input `Target [self]`.
+Target means the object you are going to call that function 'on'.
+
+Function = method ?
+
+# Pure Function
+
+function > detail > pure
+
+If check this, the function node are removed execution pin & just have input/output data pin only.
+
+Here, Pure doesn't means no side-effect, but input/ouput data only
 
 # Comment
 
 Select Multiple nodes > C key
+
+# What is a side effect
+
+when a function ha an observable effect.
+
+unpure
+
+- print string
+- add impulse
+- set ammo
+
+pure
+
+- only return values
+- get ammo
+- get actor foward vector
+- add, mul, sub, greater, less
+
+# Member Functions
+
+now, I spawn BP_Projectile instance in Level BP and add impulse in it.
+But, this adding impulse should be defined in BP_Projectile BP
+
+Because, an object behaviour should be defined as member method of class in the context of OOP.
+
+# Extract Launch method
+
+# Self
+
+Self node refers object it self.
+
+RMB > Get reference of itself.
+
+# Construction Script
+
+If BP is not level, it has `Construction Script`.
+This script is executed when BP is spawend.
+
+so, this function means BP entry point.
+(Some initilize parameter?)
+
+# Call Member function from other BP
+
+Normally, BP member function can't be called from other script.
+But, suggestioned from Spawne Actor, Get Actor, etc... 's exec pin.
+(only exec pin?)
+
+Caution: by default, Target = self is set, but self is different BP class, so should set spawn return value to target.
+
+# Loading Levels
+
+Level BP > Event Graph > RMB > Open Level (by name)
+
+This is easist way to change level or reload level.
+
+Input is Name, also can type directory but it may happens change level name.
+so use `Get Current Level Name` Node.
+
+# Delay Node
+
+In UnrealEngine, asyncronous exection result is provided by exec pin.
+
+DelayNode > dulation > something todo after dulation...
+
+# What We've learnt
+
+- BP basics
+  - nodes
+  - pins
+- Programming basics
+  - variables
+  - referencces
+  - functions
+- Unreal basics
+  - maps
+  - actors
+  - components
+  - transforms
+  - vectors
+
+
