--- a/20230205114641.md
+++ b/20230205114641.md
@@ -58,3 +58,40 @@ Ctrl + drug : change pin of already connected link
 BP_TPC > select Mesh (ChracterMesh0) > Detail > Mesh > select something...
 
 If select no compatible SkeltalMesh, then animation is not applied.
+
+
+# Install Compiler, editor
+
+Unreal engine 5.1 deps
+
+- Visual Studio 2019 > C++ game dev > unreal engine
+- VSCode
+- .Net 6
+
+# Compile Editor
+
+if want to add C++ script in game, it need to re-compile Unreal Editor.
+because C++ source should be compile in binary.
+
+# Change Default Editor
+
+Edit > Editor settings... > Source Code > visual studio code
+
+
+# Create C++ Class
+
+Tools > Programming > New C++ Class...
+
+Actor > name: MovingPlatform
+
+Then, Editor shows "Recompile Editor" message.
+Untill do it, new C++ class doesn't be shown in content manager.
+
+# Open in VSCode
+
+Tools > Generate VSCode project
+ContentBrowser > Open in Exprorer > open vscode code-workspace
+
+# Other tools Menu
+
+- Reflesh Proejct : should be executed after compile C++ source
