--- a/20230205114641.md
+++ b/20230205114641.md
@@ -95,3 +95,9 @@ ContentBrowser > Open in Exprorer > open vscode code-workspace
 # Other tools Menu
 
 - Reflesh Proejct : should be executed after compile C++ source
+
+# Error : Generate VSCode project
+
+dotnet command failed? or unreal build tool path is wrong.
+Copy executable path & args, then open powershell and paste them and execute manualy.
+
