--- a/20230205114641.md
+++ b/20230205114641.md
@@ -101,3 +101,12 @@ ContentBrowser > Open in Exprorer > open vscode code-workspace
 dotnet command failed? or unreal build tool path is wrong.
 Copy executable path & args, then open powershell and paste them and execute manualy.
 
+or, after install dependencies, restart Windows OS and reopen engine.
+
+
+# VSCode Build
+
+terminal > Run build tasks (Shift + Ctrl + B)
+
+{ProjectName} Win64 development build
+
