--- a/20230205114641.md
+++ b/20230205114641.md
@@ -104,9 +104,98 @@ Copy executable path & args, then open powershell and paste them and execute man
 or, after install dependencies, restart Windows OS and reopen engine.
 
 
-# VSCode Build
+# Rebuild UE Editor
 
 terminal > Run build tasks (Shift + Ctrl + B)
 
-{ProjectName} Win64 development build
+{ProjectName} editor Win64 development build
+or
+DebugGame build
 
+
+If UnrealEditor is running, compiling would fail.
+
+After compile, reopen editor and there is C++ Classes in ContentManager
+
+# UPROPERTY
+
+like Blueprint class, C++ class has some propeties
+
+- variable
+- functions
+- ...
+
+`UPROPERTY` is C++ macro decolator for member variable of class
+
+```cpp
+UCLASS()
+class OBSTACLEASSULT_API AMovingPlatform : public AActor
+{
+...
+public:
+	UPROPERTY(EditAnywhere)
+	int32 MyInt = 99;
+};
+```
+
+this make var editable in ue editor.
+
+# Actor_.h file
+
+header file is overview of c++ class,
+If I want to add something like variable, function, ..., then First edit header file.
+
+
+# A: Actor prefix
+
+# VSCode Auto save
+
+File > Auto save
+
+# Recompile C++ code for game systems on the fly
+
+right bottom > block? icon button
+
+# Live Coding Issue
+
+Recompile on the fly button's change doesn't remain permanently.
+Then, edited values are lost.
+
+It need to `Editor Win64 development build` to change permanently.
+(but must close editor while compiling)
+
+# Editor development build vs Live build
+
+prototyping -> Live Build
+logic completed & edit in level -> Editor build
+
+# Disable Live coding
+if Live coding is disabled, compiled class change becomes parmanent.
+
+# BeginPlay Method
+
+Same as Bluepriht's BeginPlay.
+
+It fabaravle exec Super::BeginPlay. (at all other methods)
+
+# Sructs
+
+- FVector: 3 items float
+- Vector: 3 items int
+
+
+# Call C++ Function
+
+1. Add Cube (Static Mesh Component) in Moving Platoform
+2. call SetActorLocation() in BeginPlay
+
+AActor::SetActorLocation() method have no effect default, but by adding static mesh component
+ Actor has Transform.Location. so it is enable to change loc.
+
+
+# Copy & paste struct value
+
+it is usefull for copying location
+
+1. select Vector field (like Location, Rotation, ...) > RMB > Copy
+2. other Vector field > paste
