--- a/20230205114641.md
+++ b/20230205114641.md
@@ -199,3 +199,46 @@ it is usefull for copying location
 
 1. select Vector field (like Location, Rotation, ...) > RMB > Copy
 2. other Vector field > paste
+
+
+# Game Loop
+
+1. Process Input
+2. Update game state
+3. Render to display
+
+Glossary
+- Frame : A single picture in a video
+- Frame rate
+- Tick : function called every frame
+
+
+# SetLocation on tick
+
+```cpp
+void AMovingPlatform::Tick(float DeltaTime)
+{
+	Super::Tick(DeltaTime);
+
+	MyVector.Z = MyVector.Z + 0.2;
+
+	SetActorLocation(MyVector);
+}
+
+```
+
+# VSCode Task: development build vs GameDebug build
+
+The former is no Live Coding, The later is Live coding.
+
+It is able to update editor by launching vscode build task.
+
+# pseudocode
+
+Plain Language description of the steps in an algorithm.
+疑似コード
+
+# expression vs statement
+
+expression : fragument of code that produces a value
+statement : An action to be performed.
