--- a/20230205114641.md
+++ b/20230205114641.md
@@ -242,3 +242,27 @@ Plain Language description of the steps in an algorithm.
 
 expression : fragument of code that produces a value
 statement : An action to be performed.
+
+
+# velocity & deltatime
+
+DeltatTime: Tick argument float. How long between each frames.
+
+FPS is difference between game platform.
+But deltatime independent movement behaves the same on fast and slow computer.
+
+
+# Unreal CPP Naming
+
+Class, variable, function, method = UpperCamelCase
+Macro = UPPER_CASE
+
+lower or snake case are not used.
+
+# UPROPERTY(Category)
+
+# Scope Resolution Operator
+
+Category is group of props. It sort params in detail pane.
+
+
