--- a/20230205114641.md
+++ b/20230205114641.md
@@ -260,9 +260,83 @@ Macro = UPPER_CASE
 lower or snake case are not used.
 
 # UPROPERTY(Category)
-
-# Scope Resolution Operator
-
 Category is group of props. It sort params in detail pane.
 
+# UPROPETY(VisibleAnywhere)
+
+```cpp
+	UPROPERTY(VisibleAnywhere, Category = "Moving Platform")
+	float DistanceMoved = -1;
+```
+
+set -1 for express unmodified.
+
+
+# Scope Resolution Operator ::
+
+`Class::memberFunction()` ....
+
+`::` : Scope Resolution Operator. Look inside a class. (not instance, but class)
+
+# Blueprint ChildClass
+
+C++ class > inherited Blueprint class
+
+Content Manager > C++ Classes > Create Blueprint Class base on {ClassName}
+
+# BP_TPS, MOvedUpdatedComponent 
+it's provided by CharacterMoementComponent C++ source
+
+Now BP_PushingCube is added but the character isn't affect location by pushing and cause glitch.
+
+This is because TPS code doesn't process collision when player is not moving.
+
+so, Add Movement per ticking.
+
+BP_TPS > Event tick > MOvedUpdated Component > Delta (1,1,0) > Delta (-1,-1,0)
+
+
+# GameMode Class
+
+Game Mode is An Actor that controles the 'rule'.
+
+- Who houd spawn where
+
+now, BP_TPS props seted player0 auto possess.
+So, Player Start or Play From Here menu doesn't works.
+It need to enable fom GameMode actor code.
+
+# Create / Edit Gameode
+
+There is the two ways.
+
+Editor > Blueprint Button > 
+- Project Settings > GameMode New
+  - Create
+  - Select GameModeBase Class (After created, select from here, or set from project settings)
+- World Override > GameMode Edit ... (BP_LearningKitGameMode)
+
+
+# Create BP_ObstacleAssaultGameMode
+
+- Create GameMode > GameModeBase Class
+  - DefaultPawn > BP_TPSCharacter
+
+Then, some menu works. (PlayFromHere, PlayerStart)
+
+PlayFromHere starts from point clicked by mouse.
+
+
+# FString
+
+Unreal Engine には FName, FText, FString の 3つの文字列型がある
+どうやら C/C++ の標準に属さない独自クラス
+
+マクロで作成する必要がある
+作成した値同士で比較できる
+FString は 検索、連結、置換ができ、一般的なプログラミング言語の文字列に近い使い方でよく使われる
+FName はコンテンツブラウザなどのアセット名に使う
+
+
+# Logging
 
