[nb] Edit: 20230205114641.md

--- a/20230205114641.md
+++ b/20230205114641.md
@@ -174,7 +174,7 @@ if Live coding is disabled, compiled class change becomes parmanent.
 
 # BeginPlay Method
 
-Same as Bluepriht's BeginPlay.
+Same as Blueprint's BeginPlay.
 
 It fabaravle exec Super::BeginPlay. (at all other methods)
 
@@ -284,7 +284,7 @@ C++ class > inherited Blueprint class
 
 Content Manager > C++ Classes > Create Blueprint Class base on {ClassName}
 
-# BP_TPS, MOvedUpdatedComponent 
+# BP_TPS, MovedUpdatedComponent 
 it's provided by CharacterMoementComponent C++ source
 
 Now BP_PushingCube is added but the character isn't affect location by pushing and cause glitch.
@@ -300,7 +300,7 @@ BP_TPS > Event tick > MOvedUpdated Component > Delta (1,1,0) > Delta (-1,-1,0)
 
 Game Mode is An Actor that controles the 'rule'.
 
-- Who houd spawn where
+- Who should spawn where
 
 now, BP_TPS props seted player0 auto possess.
 So, Player Start or Play From Here menu doesn't works.
