--- a/20230215001736.md
+++ b/20230215001736.md
@@ -1,3 +1,55 @@
 # Unreal Tutorial section3: CryptoReader
 
-# Action
+# ActionPlan
+
+1. Create our Level Design (lighting)
+2. "Mover" component for doors
+3. "Grabber" component for the player
+4. Call the "Grabber" functionality from BP
+5. Create a "Pressure Plate" component
+6. Tweak and polish
+
+# What We Will Learn
+
+- Pointers
+- References
+  - ptr & ref allows us to communicate between clases.
+- Actor Components
+- Scene Components
+  - components provide simplicity over just writing actors.
+- including header files
+  - provide functionality for communicating classes that isn't avalable out of box.
+- Ligthing with Lumen
+- Modular level design
+- Line Tracing and Collisions
+- Call C++ function from BP
+
+
+# Create Project & Add dungeon asset
+
+- Download `Medieval Dungeon` asset from epic unreal market
+- Create new proj > FPS > Statar: None > C++
+- Epic Launcher > Medieval Dungeon > Add to proj
+- default, No compatible message shows, so check `all project`
+- select CryptoReader
+- convert UE4.x latest
+- (wait DL for the first time)
+
+# New Level
+File > New Level > Empty
+
+# 4 split view
+
+split in 4 window with sight
+
+- Back
+- Top
+- Right
+- Perspective
+
+(Wireframe)
+
+orthogonal view 
+- MMB + drag : measure. unit is `Unreal Unit`
+
+
