[nb] Edit: 20250418061836.md

--- a/20250418061836.md
+++ b/20250418061836.md
@@ -1,4 +1,14 @@
 # Keycloak
 
 
+```sh
+docker run -e KEYCLOAK_ADMIN=admin \
+             -e KEYCLOAK_ADMIN_PASSWORD=admin \
+             -p 8080:8080 \
+             quay.io/keycloak/keycloak:18.0.2 \
+             start-dev
+```
+
+## 管理者コンソール
+
 
